# portfolio-rs

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md
config/: log4rs.yaml
src/: api.rs  config.rs  db.rs  info.rs  main.rs  server.rs
