[package]
name = "portfolio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.5"
env_logger = "0.10.1"
log = "0.4.20"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres","chrono"] }
tokio = { version = "1.35.0", features = ["full"] }
chrono = "0.4.31"
serde = "1.0.193"
serde_json = "1.0.108"