[package]
name = "portfolio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["rustls-0_21"] }
rustls = "0.21.10"
actix-cors = "0.7.0"
log4rs = "1.3.0"
log = "0.4.21"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0.194"
serde_json = "1.0.111"
lazy_static = "1.4.0"
rustls-pemfile = "1.0.4"

toml = "0.8.12"