[package]
name = "portfolio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["rustls-0_22"] }
rustls = "0.22.3"
actix-cors = "0.7.0"
log4rs = "1.3.0"
log = "0.4.21"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.198"
serde_json = "1.0.116"
lazy_static = "1.4.0"
rustls-pemfile = "2.1.2"

toml = "0.8.12"